# 1brc-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: main.cc
test/: create_measurements.py
